reste sur django lts pour l'instant

--- a/setup.cfg
+++ b/setup.cfg
@@ -15,7 +15,7 @@ zip_safe = true
 setup_requires =
     setuptools
 install_requires =
-    Django
+    Django < 2
     Pillow
     Unipath
     django-annoying
