--- a/setup.cfg
+++ b/setup.cfg
@@ -9,15 +9,15 @@ classifiers =
     Intended Audience :: Developers
     Programming Language :: Python :: 3
     Programming Language :: Python :: 3.7
+    Programming Language :: Python :: 3.8
 
 [options]
 zip_safe = true
 setup_requires =
     setuptools
 install_requires =
-    Django < 2
+    Django < 4
     Pillow
-    Unipath
     django-annoying
     django-pipeline
     django-widget-tweaks
